--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,7 @@
     "java.format.enabled": true,
     "editor.tabSize": 4,
     "editor.detectIndentation": false,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "always"
+    }
 }
